# lng-fleet-performance

./: .gitignore  INTEGRATION_PLAN.md  INTEGRATION_README.txt  lng-fleet-performance-system-technical-specification.md  render.yaml  requirements.txt
.opencode/agents/: lng-expert.md
lng-data-generator/: aggregate.py  generate_configs.py  requirements.txt  run.py  simulator.py  simulator_engine.py
lng-data-generator/config/: generator.yaml  routes.yaml  weather.yaml
lng-data-generator/generators/: __init__.py  alarms.py  ballast.py  bog.py  cargo.py  emissions.py  engine.py  fuel.py  kpi.py  maintenance.py  port.py  voyage.py  weather.py
lng-data-generator/utils/: physics.py  random_utils.py
lng-data-generator/writers/: __init__.py  parquet_writer.py  sqlite_writer.py
lng-fleet-system/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum
lng-fleet-system/edge/: Cargo.toml  Dockerfile
lng-fleet-system/edge/config/: default.toml
lng-fleet-system/edge/src/: analytics.rs  config.rs  eca.rs  main.rs  modbus.rs  opcua.rs  transmission.rs  types.rs
lng-fleet-system/frontend/: index.html  nginx.conf  package-lock.json  package.json
lng-fleet-system/migrations/: 001_schema.sql  002_seed_vessels.sql
lng-fleet-system/ml/: requirements.txt
lng-fleet-system/notebooks/: eda.py
lng-fleet-system/scripts/: load_data.py
lng-fleet-system/synthetic-data-generator/: run.py
lng_fleet_performance/: AGENTS.md  ANALYTICS_INTEGRATION_GUIDE.md  __init__.py  __main__.py  main.py  render.yaml  web.py
lng_fleet_performance/api/: app.py  (+19 more)
(+102 files in other folders)
